[gd_scene load_steps=2 format=2]

[ext_resource path="res://games/triple_slit/button/button.gd" type="Script" id=1]

[node name="button" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 30 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 14.0
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_button_mouse_exited"]
